PIMS-627 Add new filters to parcel API and updated tests. Add new API for lookup codes with sample test. Add new frontend display for code filters. Add new frontend API calls to lookup code API. Add new UI for user profile functions(currently logout only). Refactored Entities to allow code value extraction. Unrelated: Add throttle to frontend map parcel API call. Correct map css positioning. Shorten App title on small screens. Being replacing px values with rem units. Corrected parcel API so that child entities are also returned by the API. Always ensure that keycloak loads user data before app start. Update parcel popup view to display property classification properly. Remove placeholder text on login screen.

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -7,6 +7,6 @@
 
 .App-content {
   flex: 1;
-  padding-top: 77px;
+  padding-top: 68px;
   padding-bottom: 42px;
 }
